<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ProgramingInterview</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="ds">Data Structure</string>
    <string name="algo">Algorithm</string>
    <string name="db">Database</string>
    <string name="os">Operating Systems</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_question">QuestionActivity</string>
	<string name="qn">Question</string>
	<string name="showAnswer">Show Answer</string>
	<string name="next">Next</string>
	<string name="category">category</string>
</resources>
