<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Category" >

    <Button
        android:id="@+id/dsButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="57dp"
        android:text="@string/ds"
        android:onClick="callNewActivity" />

    <Button
        android:id="@+id/algoButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/dsButton"
        android:layout_below="@+id/dsButton"
        android:text="@string/algo"
        android:onClick="callNewActivity" />

    <Button
        android:id="@+id/dbButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/algoButton"
        android:layout_below="@+id/algoButton"
        android:text="@string/db" 
        android:onClick="callNewActivity"/>

    <Button
        android:id="@+id/osButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/dsButton"
        android:layout_below="@+id/dbButton"
        android:text="@string/os" 
        android:onClick="callNewActivity"/>

</RelativeLayout>
