<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".QuestionActivity" >

    <Button
        android:id="@+id/nextButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ansButton"
        android:layout_below="@+id/ansButton"
        android:layout_marginTop="20dp"
        android:text="@string/next" />

    <Button
        android:id="@+id/ansButton"
        android:layout_width="200sp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="41dp"
        android:text="@string/showAnswer" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/ansButton"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/ansButton"
        android:layout_marginTop="36dp"
        android:text="@string/qn" />

</RelativeLayout>
